--- a/app/templates/topbar.hbs
+++ b/app/templates/topbar.hbs
@@ -11,10 +11,10 @@
 
         <div class="nav-collapse">
             <ul class="nav nav-pills pull-center">
-                <!--<li class="dropdown">-->
-                    <!--<a class="dropdown-toggle" data-toggle="dropdown" href="#">Data <b class="caret"></b></a>-->
-                    <!--<ul class="data-menu dropdown-menu"></ul>-->
-                <!--</li>-->
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Data <b class="caret"></b></a>
+                    <ul class="data-menu dropdown-menu"></ul>
+                </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sessions <b class="caret"></b></a>
                     <ul class="dropdown-menu">
