--- a/app/views/templates/stacksvis_container.hbs
+++ b/app/views/templates/stacksvis_container.hbs
@@ -1,9 +1,13 @@
 <ul class="nav nav-pills">
-    <li class="dropdown">
+    <li>
         <a href="#" onclick="return false;" role="button" data-toggle="modal" data-target=".controls-modal">Controls</a>
     </li>
-    <li class="dropdown">
+    <li>
         <a href="#" onclick="return false;" role="button" data-toggle="modal" data-target=".selector-modal">Select Cluster and Rows</a>
+    </li>
+    <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" onclick="return false;">Feature Source <span class="caret"></span></a>
+        <ul class="dropdown-menu selector-sources"></ul>
     </li>
     {{#if showGeneLists}}
     <li class="dropdown">
