--- a/app/views/templates/scatterplot.hbs
+++ b/app/views/templates/scatterplot.hbs
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="span5">
-            <div class="scatterplot-container">Loading data...</div>
+            <div class="scatterplot-container"></div>
             <div class="download-container"></div>
         </div>
     </div>
