--- a/app/views/templates/scatterplot.hbs
+++ b/app/views/templates/scatterplot.hbs
@@ -54,14 +54,14 @@
                         <span class="add-on">x-axis</span>
                         <input class="input-small genes-typeahead-x span2" type="text" placeholder="Type a gene name (x-axis) ...">
                     </div>
-                    <ul class="unstyled feature-selector-x pre-scrollable">Loading features...</ul>
+                    <ul class="nav nav-list feature-selector-x pre-scrollable">Loading features...</ul>
                 </div>
                 <div class="span3">
                     <div class="input-prepend">
                         <span class="add-on">y-axis</span>
                         <input class="input-small genes-typeahead-y span2" type="text" placeholder="Type a gene name (y-axis) ...">
                     </div>
-                    <ul class="unstyled feature-selector-y pre-scrollable">Loading features...</ul>
+                    <ul class="nav nav-list feature-selector-y pre-scrollable">Loading features...</ul>
                 </div>
             </div>
         </div>
