integrated new version of splitiscope renamed carve

--- a/app/views/templates/scatterplot.hbs
+++ b/app/views/templates/scatterplot.hbs
@@ -17,19 +17,21 @@
         visibility: hidden;
     }
 
-    .y.axis path, .y.axis line {
-        stroke: #aaa;
+    .y.axis path, .y.axis line{
+        stroke:#aaa;
     }
 
     .x.axis path, .x.axis line {
-        stroke: none;
+        stroke:none;
     }
 
     .axis_label, .ticks {
-        font-size: 16px;
+        font-size:16px;
     }
 
     .data_totals {
+        font-size: 20px;
+        font-weight: 400;
         shape-rendering: crispEdges;
     }
 
