--- a/app/templates/minigraph.hbs
+++ b/app/templates/minigraph.hbs
@@ -1,28 +1,7 @@
-<div class="row">
-    {{#each nodesByType}}
-    <div class="span3 offset{{offset}}" style="width: {{width}}px">
-        <h4>{{@key}}</h4>
-        {{#each this}}
-        <div id="{{uid}}" class="node-info well" style="position: absolute; top: {{_top}}px; width: {{../width}}px">
-            {{id}}
-            <ul class="nav nav-list">
-                {{#each measures}}
-                <li title="{{key}}: {{value}}" data-placement="left">
-                    <span class="node-measures" data-key="{{key}}" style="background:{{color}}; padding-right: {{barlength}}px;">&nbsp;</span>
-                </li>
-                {{/each}}
-            </ul>
-        </div>
-        {{/each}}
-    </div>
-    {{/each}}
+<ul class="nav nav-pills cancer-selector-minigraph"></ul>
+<div class="input-prepend">
+    <span class="add-on">Cutoff</span>
+    <input class="input-small cutoff-value span1" type="text" value="0.00001"></input>
 </div>
-<ul class="minigraph-legend pull-right well nav nav-list">
-    {{#each legends}}
-    <li>
-        <span style="background-color: {{color}}; height: 20px;">
-            <a href="#" onclick="return false;" class="color-picker" data-key="{{label}}">&nbsp;&nbsp;&nbsp;</a>
-        </span>&nbsp;{{label}}
-    </li>
-    {{/each}}
-</ul>
+<button class="run-analysis-button">Run</button>
+<div class="minigraph-data" style="position: relative;"></div>
