Added inputs and dropdowns for genes, pathways and hallmarks

--- a/app/templates/minigraph.hbs
+++ b/app/templates/minigraph.hbs
@@ -1,4 +1,35 @@
 <ul class="nav nav-pills cancer-selector-minigraph"></ul>
+<ul class="nav nav-pills">
+    <li class="dropdown">
+        <button class="dropdown-toggle btn btn-success" data-toggle="dropdown" type="button">Genes</button>
+        <ul class="dropdown-menu gene-selector">
+
+        </ul>
+    </li>
+    <li>
+        <input class="genes-typeahead" type="text" placeholder="Add a gene..."/>
+    </li>
+
+    <li class="dropdown">
+        <button class="dropdown-toggle btn btn-success" data-toggle="dropdown" type="button">Pathways</button>
+        <ul class="dropdown-menu pathway-selector">
+
+        </ul>
+    </li>
+    <li>
+        <input class="pathways-typeahead" type="text" placeholder="Add a pathway..."/>
+    </li>
+
+    <li class="dropdown">
+        <button class="dropdown-toggle btn btn-success" data-toggle="dropdown" type="button">Hallmarks</button>
+        <ul class="dropdown-menu hallmark-selector">
+
+        </ul>
+    </li>
+    <li>
+        <input class="hallmarks-typeahead" type="text" placeholder="Add a hallmark..."/>
+    </li>
+</ul>
 <div class="input-prepend">
     <span class="add-on">Cutoff</span>
     <input class="input-small cutoff-value span1" type="text" value="0.00001"></input>
