Interface for user defined groups

--- a/app/templates/minigraph.hbs
+++ b/app/templates/minigraph.hbs
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills cancer-selector-minigraph"></ul>
+<ul class="nav nav-pills preset-group-selector-minigraph"></ul>
 <ul class="nav nav-pills">
     <li class="dropdown">
         <button class="dropdown-toggle btn btn-success" data-toggle="dropdown" type="button">Genes</button>
@@ -34,5 +34,6 @@
     <span class="add-on">Cutoff</span>
     <input class="input-small cutoff-value span1" type="text" value="0.00001"></input>
 </div>
-<button class="run-analysis-button">Run</button>
+<button class="btn run-analysis-button">Run</button>
+<div class="ml2-group-constructor" style="position: relative;"></div>
 <div class="minigraph-data" style="position: relative;"></div>
