Added logic for creating user defined groups

--- a/app/views/templates/minigraph_groups.hbs
+++ b/app/views/templates/minigraph_groups.hbs
@@ -1,6 +1,6 @@
 <div class="input-prepend">
     <span class="add-on">Group label</span>
-    <input class="input-small cutoff-value span3" type="text" placeholder="Type in a label..."/>
+    <input class="input-small group-label span3" type="text" placeholder="Type in a label..."/>
 </div>
 <ul class="nav nav-pills group-construct-cancer-selector"></ul>
 <ul class="nav nav-pills">
