--- a/app/templates/minigraph.hbs
+++ b/app/templates/minigraph.hbs
@@ -1,4 +1,5 @@
 <ul class="nav nav-pills preset-group-selector-minigraph"></ul>
+<select class="multiselect user-defined-group-selector" multiple="multiple"></select>
 <ul class="nav nav-pills">
     <li class="dropdown">
         <button class="dropdown-toggle btn btn-success" data-toggle="dropdown" type="button">Genes</button>
