Added functionality for removing user defined groups

--- a/app/templates/minigraph.hbs
+++ b/app/templates/minigraph.hbs
@@ -5,7 +5,7 @@
 <div class="input-prepend input-append btn-toolbar">
     <select class="multiselect user-defined-group-selector" multiple="multiple"></select>
     <button class="btn ml2-build-new-group">New</button>
-    <a class="btn" href="#"><i class="icon-trash"></i></a>
+    <a class="btn remove-user-defined-groups" href="#"><i class="icon-trash"></i></a>
 </div>
 <ul class="nav nav-pills">
     <li class="dropdown">
