--- a/app/views/templates/minigraph_heatmap.hbs
+++ b/app/views/templates/minigraph_heatmap.hbs
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="group-builder-modal-label">Heatmap</h3>
+    <h3 id="group-builder-modal-label">{{caption}}</h3>
 </div>
 
 <div class="modal-body" style="max-height: 800px;">
