--- a/app/views/templates/minigraph_node_popover.hbs
+++ b/app/views/templates/minigraph_node_popover.hbs
@@ -1,3 +1,3 @@
-<p class="lead">{{info}}</p>
+<p><small>{{info}}</small></p>
 <p>P-value: <strong>{{p-value}}</strong></p>
 <a href="{{link}}" target="_blank">{{id}}</a>
