Added status indicator

--- a/app/templates/minigraph.hbs
+++ b/app/templates/minigraph.hbs
@@ -46,5 +46,6 @@
     <span class="add-on">Hallmark Cutoff</span>
     <input class="input-small hallmark-cutoff-value span1" type="text" value="0.00001"></input>
     <button class="btn run-analysis-button">Run</button>
+    <p class="add-on lead analysis-indicator">Analysis not running</p>
 </div>
 <div class="minigraph-data" style="position: relative;"></div>
