--- a/app/scripts/templates/topbar.hbs
+++ b/app/scripts/templates/topbar.hbs
@@ -11,9 +11,8 @@
 
         <div class="nav-collapse">
             <ul class="nav nav-pills pull-center">
-                <li class="dropdown">
+                <li class="data-dropdown dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Data <b class="caret"></b></a>
-                    <ul class="data-menu dropdown-menu"></ul>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sessions <b class="caret"></b></a>
